--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.clip-path {
+  clip-path: polygon(10% 1%, 100% 1%, 100% 90%, 90% 100%, 0 100%, 0 10%);
+}
